Fixed text overflow within a post and added footer

--- a/Projects/sites/static/css/main.css
+++ b/Projects/sites/static/css/main.css
@@ -47,6 +47,7 @@ a.article-title:hover {
 
 .article-content {
   white-space: pre-line;
+  hyphens: auto;
 }
 
 .article-img {
@@ -81,4 +82,24 @@ a.article-title:hover {
 
 .account-heading {
   font-size: 2.5rem;
+}
+/* Additions */
+
+html, body {
+    height: 100%;
+}
+.wrapper {
+    min-height: 100%;
+    margin-bottom: -50px;
+    padding-bottom: 50px;
+}
+
+footer {
+    height: 100px;
+    margin-top:50px;
+    position: relative;
+    height:100px;
+    background: #343434;
+    color: #FFFFFF;
+    text-align: center;
 }
